--- a/world.css
+++ b/world.css
@@ -1,1 +1,129 @@
 /* Add your own styles */
+
+h1{ 
+   
+    
+    text-align: center;
+    
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #99BD05;
+    color: white;
+    padding: 25px;
+    margin-top: 0;
+    
+   
+    
+}
+#country{
+
+color: black;
+box-shadow: 2px 2px 2px 1px #d3d3d3;
+border-radius: 2px;
+width: 80%;
+padding: 15px;
+border: 5px;
+align-items: center;
+}
+
+
+
+#btns{
+    justify-content:  center;
+    padding: 10px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+#lookup {
+
+    color: white;
+    background-color:#99BD05;
+    box-shadow: 2px 2px 2px 1px #d3d3d3;
+    border-radius: 2px;
+    margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    border: 5px;
+    font-size: 18px;
+
+  
+}
+#city{
+    
+    
+    color: white;
+    background-color:#99BD05;
+    box-shadow: 2px 2px 2px 1px #d3d3d3;
+    border-radius: 2px;
+    font-size: 18px;
+    padding: 10px;
+    border: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+body{
+
+    margin: 0;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+
+
+main{
+    margin: 50px;
+}
+
+
+#result{
+  
+    padding: 5%;
+    font-family: 'Times New Roman', Times, serif;
+    
+
+}
+
+
+
+
+
+table{
+
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+   
+    border-radius: 2px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+th,td{
+    border:1px solid lightgray;
+    padding: 8px;
+    text-align: left;
+
+}
+
+th{
+    background-color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+
+
+   
+
+tr:nth-child(even){
+    background-color: #d1d1d1;
+    
+}
+
+
+tr:hover{
+
+    background-color: #99BD05;
+}
